style(mds-text): fix code colors for dark mode

--- a/projects/stencil/src/components/mds-text/mds-text.css
+++ b/projects/stencil/src/components/mds-text/mds-text.css
@@ -126,8 +126,6 @@
 :host ( .code ) {
   @apply
     bg-adjust-tone-09
-    dark:bg-adjust-tone-04
-    dark:text-adjust-tone-09
     px-1
     rounded
     text-adjust-tone-03
